# FFmpeg

./: android_build.sh  build_android.sh  build_android_other.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/iamzzj/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: AndroidLogDefine.h
app/src/main/java/com/iamzzj/ffmpeg/: MainActivity.java
app/src/main/jniLibs/include/libavutil/: ffversion.h
app/src/test/java/com/iamzzj/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
